--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@ rel="stylesheet"
 href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.css"
 rel="stylesheet"
 />
+
+<link rel="stylesheet" href="/mdbcss/mdb.min.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <link rel="stylesheet" href="/assets/vendors/css/vendor.bundle.base.css">
@@ -48,35 +51,16 @@ type="text/javascript"
 src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"
 ></script>
 
-    <!-- <script src="/assets/vendors/js/vendor.bundle.base.js"></script> -->
-    <!-- endinject -->
-    <!-- Plugin js for this page -->
-    <!-- <script src="/assets/vendors/chart.js/Chart.min.js"></script>
-    <script src="/assets/vendors/progressbar.js/progressbar.min.js"></script>
-    <script src="/assets/vendors/jvectormap/jquery-jvectormap.min.js"></script>
-    <script src="/assets/vendors/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
-    <script src="/assets/vendors/owl-carousel-2/owl.carousel.min.js"></script>
-   
-    <script src="/assets/js/off-canvas.js"></script>
-    <script src="/assets/js/hoverable-collapse.js"></script>
-    <script src="/assets/js/misc.js"></script>
-    <script src="/assets/js/settings.js"></script>
-    <script src="/assets/js/todolist.js"></script> -->
-    <!-- endinject -->
-    <!-- Custom js for this page -->
-    <!-- <script src="/assets/js/dashboard.js"></script> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-   -->
+<script type="text/javascript" src="/mdbjs/mdb.min.js" ></script>
+
     
     <script>
-      function toggleSideNav() {
-        var superToggle = function(element, class0){
+      const toggleSideNav = () => {
+        var superToggle = (element, class0) => {
           element.classList.toggle(class0);
         }
-        superToggle(mySidenav, 'class1', 'notdefinedyet');
-      }
-      
+        superToggle(mySidenav, 'class1');
+      } 
     </script>
   
   </body>
