--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"
 ></script>
 
 <script type="text/javascript" src="/mdbjs/mdb.min.js" ></script>
+<script type="text/javascript" src="/js/confetti.js"></script>
 
     
     <script>
@@ -61,6 +62,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.11.0/mdb.min.js"
         }
         superToggle(mySidenav, 'class1');
       } 
+     
     </script>
   
   </body>
